deployments/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.4-libtorrentv1
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrents
              mountPath: /data/torrents
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: torrents
          nfs:
            server: 10.0.0.23
            path: /serve/starr-stack/data/torrents
