deployments/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-nodeport
  namespace: servarr
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - name: torrenting-tcp
      port: 30881
      targetPort: 30881
      nodePort: 30881
      protocol: TCP
    - name: torrenting-udp
      port: 30881
      targetPort: 30881
      nodePort: 30881
      protocol: UDP
