deployments/apps/qbittorrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: torrenting-tcp
      port: 30881
      targetPort: 30881
      nodePort: 30881
      protocol: TCP
    - name: torrenting-udp
      port: 30881
      targetPort: 30881
      nodePort: 30881
      protocol: UDP
